--- a/components/common/Card/Card.module.css
+++ b/components/common/Card/Card.module.css
@@ -2,11 +2,11 @@
 }
 
 .col {
-  @apply col-span-1;
+  @apply col-span-1 flex flex-col gap-4;
 }
 
 .header {
-  @apply grid grid-cols-5;
+  @apply flex items-center gap-4;
 }
 
 .header h2 {
@@ -18,5 +18,5 @@
 }
 
 .icon {
-  @apply pb-3 pr-2;
+  @apply aspect-square;
 }
